--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@brazilian-utils/brazilian-utils": "^1.0.0-rc.12",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/base": "^5.0.0-alpha.99",
     "@mui/material": "^5.10.7",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.1.0",
@@ -15,6 +16,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/react-input-mask": "^3.0.1",
+    "@types/react-router": "^5.1.19",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.24.0",
     "bootstrap": "5.1.3",
@@ -45,7 +47,6 @@
     "@babel/preset-react": "^7.16.5",
     "@types/mixpanel-browser": "^2.36.0",
     "@types/react-helmet": "^6.1.5",
-    "@types/react-router": "^5.1.17",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^7.32.0",
